--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,89 @@
     transform: rotate(360deg);
   }
 }
+.animate-left{
+  position:relative;
+  animation:animateleft 2s
+} 
+@keyframes animateleft{
+  from{
+    left:-600px;
+    opacity:0
+  } to{
+    left:0;
+    opacity:1
+  }
+}
+.animate-right{
+  position:relative;
+  animation:animateright 2s
+}
+@keyframes animateright{
+  from{
+    right:-600px;
+    opacity:0
+  } to{
+    right:0;
+    opacity:1
+  }
+}
+.animate-bottom{
+  position:relative;
+  animation:animatebottom 2s
+}
+@keyframes animatebottom{
+  from{
+    bottom:-500px;
+    opacity:0
+  } to{
+    bottom:0;
+    opacity:1
+  }
+}
+.animate-zoom {
+  animation:animatezoom 2s
+}
+@keyframes animatezoom{
+  from{
+    transform:scale(0)
+  } to{
+    transform:scale(1)
+  }
+}
+.animate-top{
+  position:relative;
+  animation:animatetop 1s
+} 
+@keyframes animatetop{
+  from{
+    top:-300px;
+    opacity:0
+  } to{
+    top:0;
+    opacity:1
+  }
+}
+.animate-fading{
+  animation:fading 10s infinite
+} 
+@keyframes fading{
+  0%{opacity:0}
+  50%{opacity:1}
+  100%{opacity:0}}
+.animate-opacity{
+  animation:opac 2s
+} 
+@keyframes opac{
+  from{
+    opacity:0
+  } to{
+    opacity:1
+  }
+}
+.animate-spin{
+  animation:spin 2s infinite linear
+}
+@keyframes spin{
+  0%{transform:rotate(0deg)}
+  100%{transform:rotate(359deg)}
+}
