--- a/src/layout/layoutDefault/style.scss
+++ b/src/layout/layoutDefault/style.scss
@@ -243,6 +243,8 @@ input:focus {
     position: absolute;
     bottom: 20px;
     right: 10px;
+    background: transparent;
+    cursor: pointer;
   }
 }
 
