--- a/src/layout/layoutDefault/login/style.scss
+++ b/src/layout/layoutDefault/login/style.scss
@@ -4,7 +4,7 @@
     background: #fff;
     margin: 50px auto;
     border-radius: 5px;
-
+    position: relative;
     & h1 {
       padding-top: 10px;
     }
