--- a/src/component/product/product.scss
+++ b/src/component/product/product.scss
@@ -5,6 +5,7 @@
 
   &__item {
     width: 22%;
+    height: auto;
     margin-right: 10px;
     margin-bottom: 50px;
     padding-bottom: 20px;
@@ -52,7 +53,7 @@
             background: #f5b367;
         }
     }
-    
+
   }
 
   &__price {
@@ -72,7 +73,7 @@
       color: #5f5f5f;
       text-decoration: line-through;
     }
-    
+
   }
   &__discount {
     font-weight: 700;
@@ -82,20 +83,46 @@
 .fly-to-cart {
   position: fixed;
   z-index: 9999;
+  width: var(--height);
+  height: var(--width);
   border-radius: 50%;
-  animation: fly 1s ease-in-out infinite;
+  animation: fly 1s ease-in-out forwards;
 }
 
 @keyframes fly {
   0% {
     left: var(--left); /* Vị trí bắt đầu */
     top: var(--top);
-    transform: scale(0.2);
+    transform: scale(1);
   }
   100% {
-    left: 385px; /* Vị trí đích */
-    top: -450px;
-    transform: scale(0.02);
+    left: 986px; /* Vị trí đích */
+    top: 22px;
+    transform: scale(0.2);
+
+  }
+}
+.tesst {
+  position: fixed;
+  top:0;
+  left: 0;
+  z-index: 9999;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  animation: tesstt 1s ease-in-out infinite;
+}
+
+@keyframes tesstt {
+  0% {
+    left: 0; /* Vị trí bắt đầu */
+    top: 20px;
+    transform: scale(1);
+  }
+  100% {
+    left: 1050px; /* Vị trí đích */
+    top: 0;
+    transform: scale(0.2);
 
   }
 }
