--- a/src/component/product/product.scss
+++ b/src/component/product/product.scss
@@ -93,12 +93,12 @@
   0% {
     left: var(--left); /* Vị trí bắt đầu */
     top: var(--top);
-    transform: scale(1);
+    transform: scale(0.6);
   }
   100% {
-    left: 986px; /* Vị trí đích */
-    top: 22px;
-    transform: scale(0.2);
+    left: var(--leftcart); /* Vị trí dich */
+    top: var(--topcart);
+    transform: scale(0.1);
 
   }
 }
