--- a/src/component/product/product.scss
+++ b/src/component/product/product.scss
@@ -11,14 +11,23 @@
     padding-bottom: 20px;
     position: relative;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    & .rate{
-        font-size: 12px;
-        margin-left: 10px;
-        & ul li {
-            font-size: 16px;
-        }
+    &:hover {
+      box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+        rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+        rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     }
-
+    &:hover .product__view {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    & .rate {
+      font-size: 12px;
+      margin-left: 10px;
+      & ul li {
+        font-size: 16px;
+      }
+    }
   }
 
   &__title {
@@ -30,50 +39,59 @@
   }
   &__image {
     width: 100%;
-    aspect-ratio: 4/3;
-    object-fit: cover;
+    height: auto;
+    position: relative;
+    & img {
+      height: 100%;
+      width: 100%;
+      aspect-ratio: 4/3;
+      object-fit: cover;
+    }
   }
-  &__infor{
+  &__view {
+    display: none;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    background: #00000093;
+    color: #e7e7e7;
+    font-size: 22px;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  &__infor {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 10px;
-    & button{
-        border: none;
-        font-size: 22px;
-        padding: 8px 10px;
-        margin-right: 20px;
-        cursor: pointer;
-        border-radius: 50%;
-        background: #f7a241;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        &:hover{
-            background: #f5b367;
-        }
+    & button {
+      border: none;
+      font-size: 22px;
+      padding: 8px 10px;
+      margin-right: 20px;
+      cursor: pointer;
+      border-radius: 50%;
+      background: #f7a241;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      &:hover {
+        background: #f5b367;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+          rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+          rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+      }
     }
-
   }
 
-  &__price {
-    display: flex;
-    align-items: baseline;
-    margin-top: 10px;
-    margin-left: 10px;
+  & .price {
     &-new {
       font-size: 16px;
-      font-weight: 500;
-      color: #292929;
-      margin-right: 10px;
     }
     &-old {
       font-size: 14px;
-      font-weight: 400;
-      color: #5f5f5f;
-      text-decoration: line-through;
     }
-
   }
   &__discount {
     font-weight: 700;
@@ -99,12 +117,11 @@
     left: var(--leftcart); /* Vị trí dich */
     top: var(--topcart);
     transform: scale(0.1);
-
   }
 }
 .tesst {
   position: fixed;
-  top:0;
+  top: 0;
   left: 0;
   z-index: 9999;
   width: 50px;
@@ -123,6 +140,5 @@
     left: 1050px; /* Vị trí đích */
     top: 0;
     transform: scale(0.2);
-
   }
 }
