--- a/src/page/user/home/style.scss
+++ b/src/page/user/home/style.scss
@@ -82,6 +82,11 @@
       height: 100%;
       overflow: hidden;
       cursor: pointer;
+      &:hover{
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+        rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+        rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+      }
       &:hover a {
         background-color: #cf987e;
         color: #fff !important;
@@ -97,6 +102,7 @@
       &:hover img {
         height: 105%;
         width: 105%;
+        
       }
     }
     &__image {
