--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,22 @@
     opacity:1
   }
 }
+
+.text-animate {
+  display: flex; /* Đảm bảo chỉ áp dụng animation cho nội dung */
+  position: relative;    /* Định vị để animation hoạt động */
+  animation: slide-in 2s   ; /* Tạo hiệu ứng chạy vào */
+  
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(-150%); /* Xuất phát từ ngoài khung */
+  }
+  to {
+    transform: translateX(0); /* Dừng lại ở vị trí ban đầu */
+  }
+}
 .animate-right{
   position:relative;
   animation:animateright 2s
