--- a/src/component/product/product.scss
+++ b/src/component/product/product.scss
@@ -28,6 +28,17 @@
         font-size: 16px;
       }
     }
+    .discount{
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      margin-left: 10px;
+      color: #292929;
+      font-weight: 600;
+      svg{
+        margin-right: 5px;
+      }
+    }
   }
 
   &__title {
