--- a/src/page/user/product_detail/style.scss
+++ b/src/page/user/product_detail/style.scss
@@ -1,11 +1,10 @@
 .product-detail {
-  margin-top: 150px;
+  margin-top: 100px;
 
   & .breadcrumb {
     width: 100%;
     margin: 0;
-    border-bottom: #a8a8a8 1px solid;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
     padding-left: 20px;
   }
   &__main {
